# spotify-migration

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  auth.py  destination.py  migrate.py  prompts.py  pyproject.toml  requirements-dev.txt  requirements.txt  source.py  utils.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/spotify_migration/: __init__.py  __main__.py  auth.py  destination.py  migrate.py  source.py  utils.py
